# openMat

./: ChangeLog-birdy.html  ChangeLog-birdy.md  ChangeLog.txt  README.txt
Lp3rdPartyLibraries/Qwt/: Makefile
LpInsoleSensorFirmware/IarProjectFiles/: LpmsFirmware.dep  LpmsFirmware.ewp
LpInsoleSensorFirmware/LpmsSource/: AdConverter.c  CommunicationManager.c  CommunicationManager.h  HeaveMotion.h  LpFilterCVersion.h  LpMagnetometerCalibration.c  LpMagnetometerCalibration.h  LpMatrix.h  LpmsBmp180.c  LpmsBmp180.h  LpmsCanBus.h  LpmsConfig.h  LpmsLsm303dlhc.c  LpmsLsm303dlhc.h  LpmsModbus.c  LpmsRs232Usart.h  LpmsSensorParameters (Humpty's conflicted copy 2014-04-16).c  LpmsStartUp.c  LpmsStartup.h  LpmsTTLUsart.c  LpmsTimebase.h  MfiCom.c  MfiCom.h  SensorManager.c  main.c
LpMocap/: C3dParser.cpp  C3dParser.h  CMakeLists.txt  GraphWindow.cpp  GraphWindow.h  HelperFunctions.h  HumanModel.cpp  HumanModel.h  HumanModel.xml  HumanModelWindow.cpp  HumanModelWindow.h  LpmsStyles.qss  MainWindow.cpp  MainWindow.h  MicroMeasure.h  MicroMeasureWindows.cpp  MotionBuilderSocketInterface.h  PlayControl.cpp  PlayControl.h  Plot.cpp  Plot.h  VideoWindow.cpp  VideoWindow.h  XzPlot.cpp  XzPlot.h  quateuler.h
LpMocapOS/: CMakeLists.txt  GraphWindow.cpp  GraphWindow.h  HumanBodySimulation.rc  HumanModel.cpp  HumanModel.h  HumanModel.xml  HumanModelWindow.cpp  HumanModelWindow.h  MainWindow.cpp  MainWindow.h  PlayControl.cpp  PlayControl.h  Plot.cpp  Plot.h  main.cpp
LpSensor/: BleApitypes.h  BleCmdDef.c  BleCmdDef.h  BleCommands.c  BleEngine.cpp  BleEngine.h  BleUart.c  BleUart.h  BuildScript.bat  BuildScript.sh  CMakeLists.txt  CMakeLists_template.txt  CalcMisalignment.h  CalcMisalignmentOS.c  CalibrationData.cpp  CalibrationData.h  CanEngine.cpp  CanEngine.h  CanEngineLinux.cpp  EmgData.h  GaitTracking.h  GaitTrackingOS.cpp  ImuData.h  LICENSE.txt  LpFilterCVersion.h  LpFilterCVersionOS.c  LpIoBase.cpp  LpIoBase.h  LpMagnetometerCalibration.h  LpMagnetometerCalibrationOS.c  LpMagnetometerMAlignment.h  LpMagnetometerMAlignmentOS.c  LpMatrix.c  LpMatrix.h  LpSensorBaseI.h  LpemgBluetooth.cpp  LpemgBluetooth.h  LpemgIoInterface.cpp  LpemgIoInterface.h  LpemgSensor.cpp  (+38 more)
LpSensorCVersion/: BuildMe.bat  CalibrationDataC.c  CalibrationDataC.h  LpmsIoInterfaceC.c  LpmsIoInterfaceC.h  LpmsSensorC.c  LpmsSensorC.h  MicroMeasureC.c  MicroMeasureC.h  main.c
LpSensorCWrapper/: CMakeLists.txt  LpSensorCWrapper.cpp  LpSensorCWrapper.h
LpmsBNativeAndroidLibrary/: AndroidManifest.xml  LpmsBNativeAndroidLibrary.tmproj  README  build.xml  local.properties
LpmsBle/: I2C_Timing_Configuration_V1.0.1.xls  STM32F37x_Clock_Configuration_V1.0.0.xls  system_stm32f37x.c
LpmsBle/IarProjectFiles/: Project.dep  Project.ewd  Project.ewp  Project.ewt
LpmsBle/Source/: CommunicationManager.c  CommunicationManager.h  HeaveMotionOS.c  LpFilterCVersion.h  LpMagnetometerCalibration.c  LpmsAssignments.h  LpmsBmp180.c  LpmsBmp180.h  LpmsConfig.c  LpmsConfig.h  LpmsFactorySetting.h  LpmsL3gd20 (klaus-PCs in Konflikt stehende Kopie 2015-02-19).c  LpmsL3gd20.c  LpmsL3gd20.h  LpmsLsm303dlhc.c  LpmsLsm303dlhc.h  LpmsModbus.h  LpmsMpu.c  LpmsRs232Usart.c  LpmsRs232Usart.h  LpmsSensorParameters.c  LpmsSensorParameters.h  LpmsStartUp.c  LpmsStartUp.h  LpmsTTLUsart.h  LpmsTest.c  LpmsTest.h  LpmsTimebase (klaus-PCs in Konflikt stehende Kopie 2015-02-19).c  LpmsTimebase (klaus-PCs in Konflikt stehende Kopie 2015-02-19).h  LpmsTimebase.c  LpmsTimebase.h  LpmsUsart.h  SensorManager (klaus-PCs in Konflikt stehende Kopie 2015-02-19).h  SensorManager.c  SensorManager.h  Watchdog.c  Watchdog.h  i2c_mpu (klaus-PCs in Konflikt stehende Kopie 2015-02-19).c  i2c_mpu.c  i2c_mpu.h  (+7 more)
LpmsCWrapperTest/: CMakeLists.txt  main.cpp
LpmsControl/: CMakeLists.txt  CMakeLists_template.txt  CubeWindowContainer.h  DiscoveryItem.cpp  DiscoveryItem.h  DiscoveryTree.cpp  DiscoveryTree.h  FieldMapContainer.cpp  FieldMapContainer.h  FieldMapDisplay.cpp  FieldMapDisplay.h  FieldModuleIndicator.cpp  FieldModuleIndicator.h  GaitTrackingWindow.cpp  GaitTrackingWindow.h  GraphWindow.cpp  GraphWindow.h  InsoleView.cpp  InsoleView.h  MainWindow.cpp  MainWindow.h  MicroMeasure.h  MicroMeasureWindows.cpp  MotionBuilderCommunication.cpp  MotionBuilderCommunication.h  ObjFileParser.cpp  ObjFileParser.h  PlayControl.cpp  PlayControl.h  Plot.cpp  README  RescanDialog.cpp  RescanDialog.h  SensorGuiContainer.cpp  SensorGuiContainer.h  StdRedirector.cpp  StdRedirector.h  ThreeDWindow.cpp  ThreeDWindow.h  VerticalBarGraph.h  (+2 more)
LpmsFirmware/IarProjectFiles/: LpmsFirmware.dep  LpmsFirmware.ewp  LpmsFirmware.eww  LpmsFirmwareOS.dep  LpmsFirmwareOS.ewp  LpmsFirmwareOS.eww
LpmsFirmware/LpmsSource/: AdConverter.c  AdConverter.h  CommunicationManager.c  CommunicationManager.h  HeaveMotionOS.c  LpFilterCVersion.h  LpFilterCVersionOS.c  LpMagnetometerCalibration.c  LpMagnetometerCalibration.h  LpMatrix.c  LpMatrix.h  LpStopwatch.h  LpmsAssignments.c  LpmsAssignments.h  LpmsBmp180.c  LpmsBmp180.h  LpmsCanBus.c  LpmsCanBus.h  LpmsConfig.c  LpmsConfig.h  LpmsFactorySetting.h  LpmsL3gd20.c  LpmsL3gd20.h  LpmsLsm303dlhc.c  LpmsLsm303dlhc.h  LpmsModbus.c  LpmsModbus.h  LpmsMpu.c  LpmsMpu.h  LpmsRn42.c  LpmsRn42.h  LpmsRtc.c  (+23 more)
LpmsSanAngeles/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SanAngelesWindow.cpp  SanAngelesWindow.h  main.cpp  shapes.h
LpmsSimpleExample/: CMakeLists.txt  README  main.cpp
LpmsSimpleExample/vs2010/: LpmsSimpleExample.sln  LpmsSimpleExample.vcxproj
LpmsSimpleExample/vs2012/: LpmsSimpleExample.sln  LpmsSimpleExample.vcxproj
LpmsSimpleExample/vs2012-x64/: LpmsSimpleExample.sln  LpmsSimpleExample.vcxproj
LpmsTimingAnalyzer/: CMakeLists.txt  CMakeLists_template.txt  main.cpp
OpenMATCommon/: IceStormCommunication.cpp  IceStormCommunication.h  IceStormSubscriber.cpp  IceStormSubscriber.h  ImuMonitor.cpp  ImuMonitor.h  ImuMonitor.ice  ImuMonitorI.cpp  ImuMonitorI.h  LinkJoint.h  RawImuMonitorI.cpp  RawImuMonitorI.h  StartOpenMATServer.bat  config.icebox  config.service
OpenMATInstaller/: OpenMatInstaller.nsi  SetEnvironmentVariables.nsh  drvinstall.nsh
(+145 files in other folders)
